--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 	<div class="container">
-	<h1> Hello World! </h2>
+	<div class="row"
+	<h1>Lucky Nails</h1>
+	</div>
 	</div>
 </body>
 </html>
