--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 	<div class="container">
 		<div class="row">
 			<h1>Lucky Nails</h1>
+			<h2>Nail salon where you can go get a manicure and a pedicure.</h2>
 		</div>
+		<div class="row" id="about"><h3>About</h3></div>
+		<div class="row" id="menu"><h3>Menu</h3></div>
+		<div class="row" id="contact"><h3>Contact</h3></div>
 	</div>
 </body>
 </html>
