--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<h2>Nail salon where you can go get a manicure and a pedicure.</h2>
 		</div>
 		<div class="row" id="about"><h3>About</h3></div>
+			<img src="nails.jpg" alt="Nails">
 		<div class="row" id="menu"><h3>Menu</h3></div>
 		<div class="row" id="contact"><h3>Contact</h3></div>
 	</div>
