--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lucky Nails</title>
+    <title>Browser Icon</title>
+<link rel="icon" href="favicon.ico">
 </head>
 <body>
 	<div class="container">
